feat: 增加命令参数，生成gin路由地址
